<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:backgroundTint="#000000"
        tools:context=".signup">


        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView"
            android:layout_width="439dp"
            android:layout_height="925dp"
            android:src="@drawable/background2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="210dp"
            android:layout_height="338dp"
            android:layout_marginTop="21dp"
            android:layout_marginBottom="390dp"
            android:contentDescription="@string/dp"
            app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gifImageView"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/dp"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/ename"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/avenir"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0FFFFFF"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.423"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/eemail"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/avenir"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#B0FFFFFF"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ename"
            app:layout_constraintVertical_bias="0.025" />

        <EditText
            android:id="@+id/epassword"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/avenir"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#B0FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eemail"
            app:layout_constraintVertical_bias="0.028" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="248dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/avenir"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#B0FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/epassword"
            app:layout_constraintVertical_bias="0.032" />

        <Button
            android:id="@+id/signupbutton"
            android:layout_width="151dp"
            android:layout_height="38dp"
            android:background="@color/black"
            android:fontFamily="@font/avenir"
            android:text="@string/sign_up"
            android:textColorHint="#FFFFFF"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cpassword"
            app:layout_constraintVertical_bias="0.095" />

        <ImageButton
            android:id="@+id/crossbutton"
            android:layout_width="56dp"
            android:layout_height="59dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/cross"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gifImageView"
            app:layout_constraintVertical_bias="0.913"
            app:srcCompat="@drawable/cross" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="108dp"
            android:layout_height="92dp"
            android:indeterminateTint="#FFFFFF"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/gifImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gifImageView"
            app:layout_constraintVertical_bias="0.119" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
